# EnterpriseLevelDbMigration

Enterprise-Database-Migration/: .env.example  .gitignore  DB_Migration.pptx  README.md  README_1.md  data_dump_flow.md  docker-compose.yml  pyproject.toml  requirements.txt
Enterprise-Database-Migration/artifacts/: converted_procedures.json  data_migration_results.json  dependency_graph.json  final_report.json  production_deployment.json  sandbox_results.json  schema_metadata.json  schema_validation_report.json  schema_validation_test_results.json  token_usage.json  transformed_ddl.json  validation_report.json
Enterprise-Database-Migration/artifacts/blueprints/: _index.json  address.blueprint.json  category.blueprint.json  city.blueprint.json  country.blueprint.json  customer.blueprint.json  film_actor.blueprint.json  film_category.blueprint.json  film_text.blueprint.json  payment.blueprint.json  rental.blueprint.json  staff.blueprint.json  store.blueprint.json
Enterprise-Database-Migration/artifacts/ddl/: deferred_fks.sql  indexes.sql
Enterprise-Database-Migration/artifacts/procedures/: customer_create_date.sql  del_film.sql  film_in_stock.sql  film_not_in_stock.sql  get_customer_balance.sql  ins_film.sql  inventory_held_by_customer.sql  (+11 more)
Enterprise-Database-Migration/reports/: migration_report.md
Enterprise-Database-Migration/src/: __init__.py  app.py  config.py  main.py  state.py
Enterprise-Database-Migration/tests/: conftest.py  example_test_queries.txt  test_artifacts.py  test_data_migrator.py  test_reporting_agent.py  test_schema_validation.py  test_transformation.py
(+108 files in other folders)
